discord-frontend/hartex-discord-entitycache-test/tests/ui/only_pub_items.stderr
error: trait can only be derived on pub items
  --> tests/ui/only_pub_items.rs:25:10
   |
25 | #[derive(Entity)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
